<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.ioanna.myandroidapp.main.MainActivity"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz1Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz1"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginRight="@dimen/margin"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz2Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz2"
                android:layout_below="@+id/classWork2Button"
                android:layout_alignStart="@+id/dz1Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz3Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz3"
                android:layout_below="@+id/classWork3Button"
                android:layout_alignStart="@+id/dz2Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz4Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz4"
                android:layout_below="@+id/classWork4Button"
                android:layout_alignStart="@+id/dz3Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz5Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz5"
                android:layout_below="@+id/classWork5Button"
                android:layout_alignStart="@+id/dz4Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz6Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz6"
                android:layout_below="@+id/classWork6Button"
                android:layout_alignStart="@+id/dz5Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz7Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz7"
                android:layout_below="@+id/classWork7Button"
                android:layout_alignStart="@+id/dz6Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz9Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz9"
                android:layout_below="@+id/classWork8Button"
                android:layout_alignStart="@+id/dz7Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz10Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz10"
                android:layout_below="@+id/classWork9Button"
                android:layout_alignStart="@+id/dz9Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz11Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz11"
                android:layout_below="@+id/classWork12Button"
                android:layout_alignStart="@+id/dz10Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz13Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz13"
                android:layout_below="@+id/classWork13Button"
                android:layout_alignStart="@+id/dz11Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/dz14Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dz14"
                android:layout_below="@+id/classWork14Button"
                android:layout_alignStart="@+id/dz13Button"
                android:layout_marginEnd="@dimen/marginRight"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>











            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork2Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork2"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz1Button"
                android:layout_alignBottom="@+id/dz1Button"
                android:layout_toEndOf="@+id/dz1Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork3Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork3"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz2Button"
                android:layout_alignBottom="@+id/dz2Button"
                android:layout_toEndOf="@+id/dz2Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork4Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork4"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz3Button"
                android:layout_alignBottom="@+id/dz3Button"
                android:layout_toEndOf="@+id/dz3Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork5Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork5"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz4Button"
                android:layout_alignBottom="@+id/dz4Button"
                android:layout_toEndOf="@+id/dz4Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork6Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork6"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz5Button"
                android:layout_alignBottom="@+id/dz5Button"
                android:layout_toEndOf="@+id/dz5Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork7Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork7"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz6Button"
                android:layout_alignBottom="@+id/dz6Button"
                android:layout_toEndOf="@+id/dz6Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork8Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork8"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz7Button"
                android:layout_alignBottom="@+id/dz7Button"
                android:layout_toEndOf="@+id/dz7Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork9Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork9"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz9Button"
                android:layout_alignBottom="@+id/dz9Button"
                android:layout_toEndOf="@+id/dz9Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork12Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork12"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz10Button"
                android:layout_alignBottom="@+id/dz10Button"
                android:layout_toEndOf="@+id/dz10Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork13Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork13"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz11Button"
                android:layout_alignBottom="@+id/dz11Button"
                android:layout_toEndOf="@+id/dz11Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork14Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork14"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz13Button"
                android:layout_alignBottom="@+id/dz13Button"
                android:layout_toEndOf="@+id/dz13Button"
                />

            <Button
                style="@style/ChangeButton"
                android:background="@drawable/main_button"
                android:id="@+id/classWork16Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_classwork16"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin"
                android:layout_alignBaseline="@+id/dz14Button"
                android:layout_alignBottom="@+id/dz14Button"
                android:layout_toEndOf="@+id/dz14Button"
                />


            </RelativeLayout>
    </ScrollView>
</RelativeLayout>
